tests/errors/err_too_many_nested_loops.mix
// ERROR: too many nested loops (max 32)
main()
    a! = 0
    while a < 1
        while a < 1
            while a < 1
                while a < 1
                    while a < 1
                        while a < 1
                            while a < 1
                                while a < 1
                                    while a < 1
                                        while a < 1
                                            while a < 1
                                                while a < 1
                                                    while a < 1
                                                        while a < 1
                                                            while a < 1
                                                                while a < 1
                                                                    while a < 1
                                                                        while a < 1
                                                                            while a < 1
                                                                                while a < 1
                                                                                    while a < 1
                                                                                        while a < 1
                                                                                            while a < 1
                                                                                                while a < 1
                                                                                                    while a < 1
                                                                                                        while a < 1
                                                                                                            while a < 1
                                                                                                                while a < 1
                                                                                                                    while a < 1
                                                                                                                        while a < 1
                                                                                                                            while a < 1
                                                                                                                                while a < 1
                                                                                                                                    while a < 1
                                                                                                                                        print(a)
                                                                                                                                        a! += 1
